--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,29 @@
-.App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  border: 1px solid blue;
+  margin: auto;
+  padding: 10px;
+  min-width: 100%;
+  height: 5rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+header h1 {
+  margin: auto;
+  padding: 10px;
+}
+
+section {
+  margin: auto;
+  padding: 10px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  border: 1px solid violet;
 }
