--- a/src/components/Daily/Api.css
+++ b/src/components/Daily/Api.css
@@ -4,15 +4,27 @@
   flex-flow: wrap;
   margin: 0;
   padding: 0;
+  background: #b7ceff;
 }
 
-h3 {
-  margin: auto;
+.type {
+  margin: 20px;
   padding: 5px;
   display: flex;
   justify-content: center;
 }
 
+.type h3 {
+  margin: auto;
+  padding: 10px;
+  width: 250px;
+  color: #2929ff;
+  text-align: center;
+  text-shadow: 0 5px 8px lightblue, 0 3px 6px darkblue;
+  border-radius: 15px;
+  box-shadow: 0 5px 8px gray, 0 3px 6px black;
+  background: white;
+}
 .movies {
   width: 100%;
   display: flex;
@@ -25,11 +37,17 @@ h3 {
   list-style: none;
 }*/
 
+.movie {
+  margin: 2em 20px 1em;
+}
+
 .data {
-  margin: 40px;
+  margin: auto;
   padding: 5px;
-  width: 250px;
-  border: 1px solid blue;
+  width: 325px;
+  background: #e9e9e9;
+  border-radius: 15px;
+  box-shadow: 0 5px 8px gray, 0 3px 6px black;
 }
 
 .data h3,
