--- a/src/components/Daily/Api.css
+++ b/src/components/Daily/Api.css
@@ -52,7 +52,7 @@
 }
 
 .data {
-  margin: auto;
+  margin: 20px 5px;
   padding: 5px;
   width: 325px;
   background: #e9e9e9;
@@ -63,7 +63,7 @@
 .data h3,
 h4 {
   margin: auto;
-  padding: 5px;
+  padding: 2px;
   display: flex;
   justify-content: left;
 }
